# Dudo_TDD

./: .flake8  .gitignore  .pre-commit-config.yaml  .pre-commit-config.yaml.backup  README  README.md  conventions.md  main.py  pydocstyle.ini  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
src/game/: arbitro_ronda.py  cacho.py  contador_pintas.py  dado.py  gestor_partida.py  jugador.py  validador_apuesta.py
src/services/: generador_aleatorio.py
tests/: test_arbitro_ronda.py  test_cacho.py  test_contador_pintas.py  test_dado.py  test_gestor_partida.py  test_jugador.py  test_validador_apuesta.py
